--- a/app/src/main/res/layout/closeshift_layout.xml
+++ b/app/src/main/res/layout/closeshift_layout.xml
@@ -199,6 +199,7 @@
                 android:layout_marginLeft="50dp"
                 android:layout_marginRight="50dp"
                 android:layout_marginTop="30dp"
+                android:onClick="CloseShift"
                 android:text="Закрыть смену" />
         </LinearLayout>
 
