--- a/app/src/main/res/layout/new_order_layout.xml
+++ b/app/src/main/res/layout/new_order_layout.xml
@@ -1,10 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:weightSum="1">
 
     <include
         android:id="@+id/toolbar"
         layout="@layout/toolbar"/>
+
+    <TextView
+        android:id="@+id/textView_Name_Drink"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Выберите напиток:"
+        android:textSize="18sp" />
+
+    <ListView
+        android:id="@+id/listView"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
 
 </LinearLayout>
