--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -2,7 +2,7 @@
 <TextView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:padding="20dp"
-    android:textSize="30sp">
-
+    android:padding="30dp"
+    android:textSize="30sp"
+    android:textColor="@color/md_black_1000">
 </TextView>
