--- a/app/src/main/res/layout/new_order_layout.xml
+++ b/app/src/main/res/layout/new_order_layout.xml
@@ -1,45 +1,120 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:weightSum="1">
+    android:layout_height="match_parent">
 
     <include
         android:id="@+id/toolbar"
         layout="@layout/toolbar"/>
 
-    <TextView
-        android:id="@+id/textView_Name_Drink"
+    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+        android:id="@+id/scroll"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Выберите напиток:"
-        android:textSize="18sp" />
-
-    <ListView
-        android:id="@+id/listView_Name"
+        android:visibility="visible">
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="match_parent"
+        android:orientation="vertical">
 
-    <TextView
-        android:id="@+id/textView_Volume"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Выберите объем напитка:" />
+        <TextView
+            android:id="@+id/textView_Name_Drink"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="30dp"
+            android:layout_marginRight="30dp"
+            android:text="Выберите напиток:"
+            android:textSize="18sp" />
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical">
+        <ListView
+            android:id="@+id/listView_Name"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
+            </LinearLayout>
 
-    <ListView
-        android:id="@+id/listView_Volume"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        <TextView
+            android:id="@+id/textView_Volume"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="30dp"
+            android:layout_marginRight="30dp"
+            android:layout_marginTop="30dp"
+            android:text="Выберите объем напитка:"
+            android:textSize="18sp" />
 
-    <TextView
-        android:id="@+id/textView_Additives"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Добавки:" />
+        <ListView
+            android:id="@+id/listView_Volume"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
+        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+            xmlns:tools="http://schemas.android.com/tools"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="horizontal">
 
-    <ListView
-        android:id="@+id/listView_Additive"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+            <TextView
+                android:id="@+id/textView_Additives"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="30dp"
+                android:layout_marginRight="30dp"
+                android:layout_marginTop="30dp"
+                android:layout_weight="1"
+                android:text="Добавки:"
+                android:textSize="18sp" />
+
+            <Switch
+                android:id="@+id/switch_Additives"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_marginRight="30dp"
+                android:layout_marginTop="30dp"
+                android:layout_weight="2"
+                android:checked="false"
+                android:splitTrack="false" />
+
+        </LinearLayout>
+
+        <ListView
+            android:id="@+id/listView_Additives"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:choiceMode="multipleChoice" />
+        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/textView_Syrup"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="30dp"
+                android:layout_marginRight="30dp"
+                android:layout_marginTop="30dp"
+                android:layout_weight="1"
+                android:text="Сиропы:"
+                android:textSize="18sp" />
+
+            <Switch
+                android:id="@+id/switch_Syrup"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_marginRight="30dp"
+                android:layout_marginTop="30dp"
+                android:layout_weight="2"
+                android:checked="false"
+                android:splitTrack="false" />
+        </LinearLayout>
+
+        <ListView
+            android:id="@+id/listView_Syrup"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" />
+    </LinearLayout>
+    </ScrollView>
 
 </LinearLayout>
